--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "chumper/zipper",
+    "name": "quibax/zipper",
     "type": "library",
     "description": "This is a little neat helper for the ZipArchive methods with handy functions",
     "keywords": ["laravel", "ZIP", "Archive"],
-    "homepage": "http://github.com/Chumper/zipper",
+    "homepage": "http://github.com/quibax/zipper",
     "license": "Apache2",
     "authors": [
         {
@@ -11,17 +11,22 @@
             "email": "github@nilsplaschke.de",
             "homepage": "http://nilsplaschke.de",
             "role": "Developer"
+        },
+        {
+            "name": "Stijn Debakker",
+            "email": "stijn@quibax.com",
+            "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=7.4|^8.0",
         "ext-zip": "*",
-        "illuminate/support": "^5.0",
-        "illuminate/filesystem": "^5.0"
+        "illuminate/support": "^8.0",
+        "illuminate/filesystem": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "^0.9.4"
+        "phpunit/phpunit": "^9.3.3",
+        "mockery/mockery": "^1.4.2"
     },
     "autoload": {
         "psr-4": {
