--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "require": {
         "php": ">=7.4|^8.0",
         "ext-zip": "*",
-        "illuminate/support": "^8.0",
-        "illuminate/filesystem": "^8.0"
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/filesystem": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3.3",
